# tuxbox

./: .gitignore  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  Cargo.toml  README.md  RELEASE_INSTRUCTIONS.md  SESSION_2026-02-12.md  TEST_INSTRUCTIONS.md  install.sh
.claude/: README.md  architecture-notes.md  cli-reference.md  quick-start.md  settings.local.json
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  release.yml
docs/: DISTRIBUTION_STRATEGY.md  INSTALLATION.md  QUICK_START.md  REGISTRY_FORMAT.md  _config.yml  example-tools.toml  index.md
src/: cli.rs  config.rs  docker.rs  environment.rs  error.rs  git.rs  main.rs  native.rs  python.rs  registry.rs  runner.rs  selfupdate.rs  tool_state.rs
