[package]
name = "tuxbox"
version = "0.2.1"
edition = "2024"
authors = ["Davide Isoardi <davide.isoardi@dxc.com>"]
license = "MIT"
description = "A meta-tool to manage and run personal tools from Git repositories with lazy loading"
repository = "https://github.com/disoardi/tuxbox"
readme = "README.md"
keywords = ["cli", "tools", "git", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tbox"
path = "src/main.rs"

[dependencies]
# CLI framework - using derive API (modern 2026 pattern)
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling (modern 2026 stack)
anyhow = "1.0"
thiserror = "2.0"

# Git operations
git2 = "0.19"

# Path and filesystem utilities
dirs = "5.0"

# Colored output
colored = "2.1"

# Self-update functionality
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1.0"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
