[package]
name = "tuxbox"
version = "0.2.6"
edition = "2024"
authors = ["Davide Isoardi <davide.isoardi@dxc.com>"]
license = "MIT"
description = "A meta-tool to manage and run personal tools from Git repositories with lazy loading"
repository = "https://github.com/disoardi/tuxbox"
readme = "README.md"
keywords = ["cli", "tools", "git", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tbox"
path = "src/main.rs"

[dependencies]
# CLI framework - using derive API (modern 2026 pattern)
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling (modern 2026 stack)
anyhow = "1.0"
thiserror = "2.0"

# Git operations (vendored = statically linked, no system libssl dependency)
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }

# Path and filesystem utilities
dirs = "5.0"

# Colored output
colored = "2.1"

# Self-update functionality (rustls-tls = pure Rust TLS, no system libssl dependency)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = "1.0"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
